# withlogic-exercise

./: db.sqlite3  index.js  manage.py  package.json  pyproject.toml
.github/workflows/: django.yml
public/: index.html
sort/: apps.py  tests.py  urls.py  utils.py  views.py
static/css/: style.css
static/js/: index.js
templates/: base.html  home.html
utils/: asyncHandler.js  quicksort.js
withlogic/: asgi.py  settings.py  urls.py  wsgi.py
